--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "sqlite3": "^3.1.3"
   },
   "devDependencies": {
-    "babel-core": "*",
-    "babel-loader": "^8.0.4",
+    "@babel/core": "^7.1.5",
+    "@babel/preset-env": "^7.1.5",
+    "babel-core": "^7.0.0-0",
+    "babel-loader": "^7.0.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
-    "webpack": "^4.0.0-beta.3",
-    "webpack-cli": "^2.0.9"
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1"
   }
 }
